# scm-dep

./: .gitignore  pyproject.toml
.github/workflows/: python-publish.yml
bar/: moda.py  modb.py
