[project]
name = "sa-bar"
dynamic = ["version"]
dependencies = ["sa-foo>=0.7.2", "sa-baz>=0.3.1"]

[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=6.2", "wheel", "build"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "bar/version.py"
version_scheme = "release-branch-semver"
